Be/src/main/java/com/example/ManagerApp/app/rest/error/StorageException.java
package com.example.ManagerApp.app.rest.error;

public class StorageException extends RuntimeException {
    public StorageException(String message) {
        super(message);
    }
}
